// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/VersionHistoryLink should render the formatted message 1`] = `
<div
  className=""
>
  <FormattedMessage
    defaultMessage="{versionCount, number} Saved Versions"
    id="boxui.itemDetails.savedVersions"
    values={
      Object {
        "versionCount": 3,
      }
    }
  />
</div>
`;

exports[`features/item-details/VersionHistoryLink should render with PlainButton when onClick is passed, and render additional props 1`] = `
<PlainButton
  className="lnk test"
  data-resin-target="versionhistory"
  onClick={[Function]}
>
  <FormattedMessage
    defaultMessage="{versionCount, number} Saved Versions"
    id="boxui.itemDetails.savedVersions"
    values={
      Object {
        "versionCount": 3,
      }
    }
  />
</PlainButton>
`;
